Removed deprecated class sun.misc.BASE64Decoder